--- a/html/css/pages/offers/detail.css
+++ b/html/css/pages/offers/detail.css
@@ -187,3 +187,44 @@ section {
         display: none;
     }
 }
+
+@keyframes move-forever {
+    0% {
+        transform: translate(-90px, 0%);
+    }
+
+    100% {
+        transform: translate(85px, 0%);
+    }
+}
+
+/* Waves */
+.wave {
+    width: 100vw;
+    opacity: 0.3;
+}
+
+
+.waves>use {
+    animation: move-forever 12s -12s linear infinite;
+}
+
+
+.waves>use:nth-child(2) {
+    animation-delay: -12s;
+    animation-duration: 27s;
+}
+
+
+.waves>use:nth-child(3) {
+    animation-delay: -16s;
+    animation-duration: 12s;
+}
+
+
+.waveSvg {
+    width: 100vw;
+    height: 10vw;
+    transform: rotate(180deg) translateY(-100%);
+    transform-origin: top;
+}
