added eye for passwords

--- a/html/css/form/checkbox-normal.css
+++ b/html/css/form/checkbox-normal.css
@@ -2,7 +2,7 @@
 
 Its the normal checkbox button.
 "/switch.css" also uses a checkbox. so be careful and don't forget
-to use the class "checkboxNormal".
+to use the class "checkbox-normal".
 
 if it isn't specified specified. A normal checkbbox will appear.
 
