--- a/html/css/pages/offers/detail.css
+++ b/html/css/pages/offers/detail.css
@@ -269,8 +269,8 @@ section {
     z-index: 1000;
     max-width: 400px;
     position: fixed;
-    bottom: 1rem;
-    right: 1rem;
+    bottom: 2rem;
+    right: 2rem;
 
     display: flex;
     flex-direction: column-reverse;
@@ -279,15 +279,28 @@ section {
 }
 
 .messages-container {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     gap: .5rem;
+    background: rgb(var(--color-white));
+    overflow-y: scroll;
 }
 
+/* Textarea */
+.chat textarea {
+    border: 1px solid rgb(var(--color-gray-1));
+    border-radius: var(--radius-medium);
+    padding: .5rem;
+    font-family: inherit;
+}
+
+/* Message card */
 .messages-container .message {
     background: rgb(var(--color-white));
     padding: .5rem;
     border-radius: var(--radius-medium);
+    border: 1px solid rgb(var(--color-gray-1));
 }
 
 .messages-container .message pre {
