feat(tchatator): huge improvement of web member client

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -18,6 +18,7 @@
 @import "parts/payment.css";
 @import "parts/carousel.css";
 @import "parts/password-check.css";
+@import "parts/tchatator-member.css";
 
 @import "form/form.css";
 @import "form/button.css";
