feat: add and delete replies and report

--- a/html/css/pages/offers/detail.css
+++ b/html/css/pages/offers/detail.css
@@ -262,3 +262,65 @@ section {
     transform: rotate(180deg) translateY(-100%);
     transform-origin: top;
 }
+
+
+
+.report-form.hide{
+    display: none;
+}
+
+.report-form{
+    width: auto;
+}
+
+
+.reply-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 1rem;
+}
+
+.reply-form textarea {
+    width: 100%;
+    min-height: 80px;
+    resize: vertical;
+    border-radius: 5px;
+    border: 1px solid rgb(var(--color-gray-2));
+}
+
+.reply-form.hide {
+    display: none;
+}
+
+.reply-text {
+    margin-left: 30px;
+}
+
+.reply-text div{
+    margin: 20px 0 0 40px;
+}
+
+.reply-hr {
+    border: none;
+    height: 1px;
+    background-color: rgb(var(--color-gray-1));
+}
+
+.reply-text.hide {
+    display: none;
+}
+
+.reply-text svg {
+    position: absolute;
+    height: 33px;
+}
+
+.reply-title {
+    font-size: var(--typescale-d1);
+}
+
+.reply-comment {
+    max-width: 500px;
+    overflow-wrap: break-word;
+}
