--- a/html/css/pages/dashboard/avis.css
+++ b/html/css/pages/dashboard/avis.css
@@ -44,3 +44,56 @@
     width: 100%;
     height: 20px;
 }
+
+
+
+.reply-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 1rem;
+}
+
+.reply-form textarea {
+    width: 100%;
+    min-height: 80px;
+    resize: vertical;
+    border-radius: 5px;
+    border: 1px solid rgb(var(--color-gray-2));
+}
+
+.reply-form.hide {
+    display: none;
+}
+
+.reply-text {
+    margin-left: 30px;
+}
+
+.reply-text div{
+    margin: 10px 0 0 25px;
+}
+
+.reply-hr {
+    border: none;
+    height: 1px;
+    background-color: rgb(var(--color-gray-1));
+}
+
+.reply-text.hide {
+    display: none;
+}
+
+.reply-text svg {
+    position: absolute;
+    height: 33px;
+}
+
+.reply-title {
+    font-size: var(--typescale-d1);
+}
+
+.reply-comment {
+    max-width: 500px;
+    overflow-wrap: break-word;
+}
