--- a/html/css/pages/dashboard/avis.css
+++ b/html/css/pages/dashboard/avis.css
@@ -56,10 +56,13 @@
 
 .reply-form textarea {
     width: 100%;
-    min-height: 80px;
-    resize: vertical;
+    min-height: 75px;
+    resize: none;
     border-radius: 5px;
     border: 1px solid rgb(var(--color-gray-2));
+    font-family: var(--font-text);
+    font-style: italic;
+    padding: 10px;
 }
 
 .reply-form.hide {
