--- a/html/css/parts/carousel.css
+++ b/html/css/parts/carousel.css
@@ -1,3 +1,7 @@
+.carousel-gen {
+    position: relative;
+}
+
 .carousel{
     position: relative;
     padding: 20px 4px;
@@ -5,7 +9,7 @@
 }
 
 .carousel__container{
-    transition: transform 0.3s;
+    transition: transform 0.3s cubic-bezier(.4,.79,.61,.96);
     transform: translate3d(0, 0, 0);
 }
 
@@ -34,10 +38,16 @@
 }
 
 .carousel__next:hover, .carousel__prev:hover{
-    transform: scale(1.2);
+    /*transform: scale(1.1);*/
+}
+
+.carousel__next{
+    transform: translateX(150%);
+    left: auto;
 }
 
 .carousel__prev{
+    transform: translateX(-150%);
     background-image: url(/assets/icons/chevron-left.svg);
     right: auto;
 }
