--- a/html/css/parts/footer.css
+++ b/html/css/parts/footer.css
@@ -1,8 +1,8 @@
 footer {
     width: 100%;
     padding: 1rem 20% 4rem;
-    overflow: hidden;
     position: relative;
+    overflow: hidden;
 
     display: flex;
     flex-direction: column;
@@ -159,14 +159,16 @@ footer #logo {
 
 
 /* Footer background */
-/*footer .footer-background {*/
-/*    position: absolute;*/
-/*    top: 50%;*/
-/*    left: 50%;*/
-/*    transform: translate(-50%, -50%);*/
-/*    width: 100vw;*/
-/*    height: 100%;*/
-/*    z-index: -1;*/
-/*}*/
-/*footer .footer-background path {*/
-/*}*/
+footer .footer-background {
+    position: absolute;
+    top: -50%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    height: 500%;
+    object-fit: cover;
+    z-index: -1;
+}
+footer .footer-background path {
+    height: 300%;
+}
