--- a/html/css/parts/footer.css
+++ b/html/css/parts/footer.css
@@ -159,16 +159,16 @@ footer #logo {
 
 
 /* Footer background */
-footer .footer-background {
-    position: absolute;
-    top: -50%;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    height: 500%;
-    object-fit: cover;
-    z-index: -1;
-}
-footer .footer-background path {
-    height: 300%;
-}
+/*footer .footer-background {*/
+/*    position: absolute;*/
+/*    top: -50%;*/
+/*    left: 50%;*/
+/*    transform: translateX(-50%);*/
+/*    width: 100%;*/
+/*    height: 500%;*/
+/*    object-fit: cover;*/
+/*    z-index: -1;*/
+/*}*/
+/*footer .footer-background path {*/
+/*    height: 300%;*/
+/*}*/
