--- a/html/css/parts/navbar.css
+++ b/html/css/parts/navbar.css
@@ -168,45 +168,51 @@
     }
 }
 
-/* Notifications */
-.notification-container{
-    max-width: 25rem;
-    max-height: 18rem;
-    overflow-y: scroll;
-    padding: .8rem 1rem;
-    position: absolute;
+/* -----------------------------------------------------------------
+    Notifications
+----------------------------------------------------------------- */
+
+.notification-container {
+    height: calc(100vh - var(--navbar-height));
+    max-width: 400px;
+    min-width: 400px;
+    z-index: 500;
+    position: fixed;
     bottom: 0;
-    right: 11.5%;
-    transform: translateY(calc(100%)) translateX(-75%);
-    border-radius: var(--radius-small);
-    border: 1px solid rgb(var(--color-gray-1));
-    background: white;
+    right: 0;
+    top: calc(var(--navbar-height) - 2px);
+    border-left: 1px solid rgb(var(--color-gray-1));
+    background: rgb(var(--color-white));
     pointer-events: none;
     opacity: 0;
-    z-index: 0;
+    overflow-y: scroll;
+}
 
-    transition: opacity .2s ease, transform .2s ease;
+.notification-header{
+    max-height: 80px;
+    min-height: 80px;
+}
+
+.notification-header-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-height: 80px;
+    min-height: 80px;
+}
+
+.notification-text-header{
+    margin-right: 20px;
+    font-size: 30px;
+}
+
+.notification-separator-header{
+    height: 1px;
+    background-color: rgb(var(--color-gray-1));
 }
 
 .notification-container.open{
     opacity: 1;
-    pointer-events: auto;
-    transform: translateY(calc(100% + .5rem)) translateX(-75%);
-    border-radius: var(--radius-small);
-}
-
-.notification .notification-container a {
-    width: 100%;
-    padding: .8rem 1rem;
-
-    background-color: white;
-    border-bottom: 1px solid rgb(var(--color-gray-1));
-
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-
-    transition: background-color .2s ease;
 }
 
 .notification .notification-icon{
@@ -218,13 +224,41 @@
 
 .notification-separator {
     height: 1px;
-    background-color: #ccc;
+    background-color: rgb(var(--color-gray-1));
     margin: 10px 0;
 }
 
-
 .notification-card{
-    padding: 1rem 2rem;
+    display: flex;
+}
+
+.notification-card-icon{
+    max-width: 60px;
+    min-width: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.notification-card-content{
+    padding: 1rem 0.5rem;
+    max-width: 280px;
+    min-width: 280px;
+}
+
+.notification-card-bin{
+    border-left: solid 1px rgb(var(--color-gray-1));
+    max-width: 60px;
+    min-width: 60px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.no-notifications{
+    text-align: center;
+    margin-top: 25rem;
 }
 
 @media only screen and (max-width: 768px) {
@@ -269,7 +303,10 @@
     }
 }
 
-/* Avatar */
+/* -----------------------------------------------------------------
+    Avatar
+----------------------------------------------------------------- */
+
 .professional-mode .navbar .avatar .image-container:hover {
     box-shadow: 0 0 0 2px rgba(var(--color-purple-primary), .5);
 }
@@ -344,8 +381,10 @@
     border-bottom: none;
 }
 
+/* -----------------------------------------------------------------
+    Bottom navbar
+----------------------------------------------------------------- */
 
-/* Bottom navbar */
 .bottom-navbar {
     width: 100vw;
     bottom: 0;
