--- a/html/css/pages/dashboard/avis.css
+++ b/html/css/pages/dashboard/avis.css
@@ -170,3 +170,56 @@
     border-radius: 0 0 var(--radius-small) var(--radius-small);
     border-bottom: none;
 }
+
+
+/* blacklist */
+
+.color-red{
+    color: rgb(var(--color-danger));
+    border-color: rgb(var(--color-danger));
+}
+
+.color-green{
+    color: rgb(var(--color-success));
+    border-color: rgb(var(--color-success));
+}
+
+.color-yellow{
+    color: rgb(var(--color-warning));
+    border-color: rgb(var(--color-warning));
+}
+
+/* indication pour les jetons */
+
+.token-tooltip {
+    position: relative;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.tooltip-text {
+    visibility: hidden;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    text-align: center;
+    padding: 5px 10px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: 150%;
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    z-index: 10;
+    font-size: smaller;
+    width: inherit;
+    height: auto;
+    text-wrap: wrap;
+
+}
+
+.token-tooltip:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+}
