--- a/html/css/parts/navbar.css
+++ b/html/css/parts/navbar.css
@@ -186,6 +186,7 @@
     pointer-events: none;
     opacity: 0;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .notification-container.open{
